# YgorClustering

./: .gitignore  .lgtm.yml  CMakeLists.txt  LICENSE  PKGBUILD  README  README.md  compile_and_install.sh  install.sh  package_and_install_archlinux.sh
OLD/: 20150831_GDBSCAN_Pre-conversion.cc  20150901-152342_Clustering.cc  20150901-174053_Clustering_Benchmark_nearest_neighbours.cc  20150901_Clustering_working_but_not_as_an_object_yet.cc  20150902_Clustering.cc  Clustering_Original.cc  compile.sh
cmake/: YgorClusteringConfig.cmake.in
examples/: CMakeLists.txt  Example1.cc  Example2.cc  Example3.cc  Example4.cc  compile.sh
src/: CMakeLists.txt  YgorClusterID.hpp  YgorClustering.hpp  YgorClusteringDBSCAN.hpp  YgorClusteringDatum.hpp  YgorClusteringDatumCommonInstantiations.hpp  YgorClusteringHelpers.hpp
